_integration/testsuite/httpproxy/016-dynamic-headers.yaml
# Copyright Project Contour Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License.  You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations
# under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-conformance-echo
$apply: fixture

---

apiVersion: v1
kind: Service
metadata:
  name: ingress-conformance-echo
$apply: fixture

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: echo
spec:
  virtualhost:
    fqdn: echo.projectcontour.io
  routes:
    - conditions:
      - prefix: /
      services:
        - name: ingress-conformance-echo
          port: 80
          requestHeadersPolicy:
            set:
            - name: X-App-Weight
              value: '100%'
            - name: X-Envoy-hostname
              value: '%HOSTNAME%'
            - name: X-Envoy-unknown
              value: '%UNKNOWN%' 
            - name: X-Envoy-Upstream-Remote-Address
              value: '%UPSTREAM_REMOTE_ADDRESS%'
            - name: X-Request-Host
              value: '%REQ(Host)%'
            - name: X-Request-Missing-Header
              value: '%REQ(Missing-Header)%ook'
            - name: X-Host-Protocol
              value: '%REQ(Host)% - %PROTOCOL%'
            - name: X-Dynamic-Header-1
              value: '%DOWNSTREAM_REMOTE_ADDRESS%'
            - name: X-Dynamic-Header-2
              value: '%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%'
            - name: X-Dynamic-Header-3
              value: '%DOWNSTREAM_LOCAL_ADDRESS%'
            - name: X-Dynamic-Header-4
              value: '%DOWNSTREAM_LOCAL_ADDRESS_WITHOUT_PORT%'
            - name: X-Dynamic-Header-5
              value: '%DOWNSTREAM_LOCAL_PORT%'
            - name: X-Dynamic-Header-6
              value: '%DOWNSTREAM_LOCAL_URI_SAN%'
            - name: X-Dynamic-Header-7
              value: '%DOWNSTREAM_PEER_URI_SAN%'
            - name: X-Dynamic-Header-8
              value: '%DOWNSTREAM_LOCAL_SUBJECT%'
            - name: X-Dynamic-Header-9
              value: '%DOWNSTREAM_PEER_SUBJECT%'
            - name: X-Dynamic-Header-10
              value: '%DOWNSTREAM_PEER_ISSUER%'
            - name: X-Dynamic-Header-11
              value: '%DOWNSTREAM_TLS_SESSION_ID%'
            - name: X-Dynamic-Header-12
              value: '%DOWNSTREAM_TLS_CIPHER%'
            - name: X-Dynamic-Header-13
              value: '%DOWNSTREAM_TLS_VERSION%'
            - name: X-Dynamic-Header-14
              value: '%DOWNSTREAM_PEER_FINGERPRINT_256%'
            - name: X-Dynamic-Header-15
              value: '%DOWNSTREAM_PEER_FINGERPRINT_1%'
            - name: X-Dynamic-Header-16
              value: '%DOWNSTREAM_PEER_SERIAL%'
            - name: X-Dynamic-Header-17
              value: '%DOWNSTREAM_PEER_CERT%'
            - name: X-Dynamic-Header-18
              value: '%DOWNSTREAM_PEER_CERT_V_START%'
            - name: X-Dynamic-Header-19
              value: '%DOWNSTREAM_PEER_CERT_V_END%'
            - name: X-Dynamic-Header-20
              value: '%HOSTNAME%'
            - name: X-Dynamic-Header-21
              value: '%PROTOCOL%'
            - name: X-Dynamic-Header-22
              value: '%UPSTREAM_REMOTE_ADDRESS%'
            - name: X-Dynamic-Header-23
              value: '%RESPONSE_FLAGS%'
            - name: X-Dynamic-Header-24
              value: '%RESPONSE_CODE_DETAILS%'
            - name: X-Contour-Namespace
              value: '%CONTOUR_NAMESPACE%'
            - name: X-Contour-Service
              value: '%CONTOUR_SERVICE_NAME%:%CONTOUR_SERVICE_PORT%'
          responseHeadersPolicy:
            set:
            - name: X-App-Weight
              value: '100%'
            - name: X-Envoy-hostname
              value: '%HOSTNAME%'
            - name: X-Envoy-unknown
              value: '%UNKNOWN%' 
            - name: X-Envoy-Upstream-Remote-Address
              value: '%UPSTREAM_REMOTE_ADDRESS%'
            - name: X-Request-Host
              value: '%REQ(Host)%'
            - name: X-Request-Missing-Header
              value: '%REQ(Missing-Header)%ook'
            - name: X-Host-Protocol
              value: '%REQ(Host)% - %PROTOCOL%'
            - name: X-Dynamic-Header-1
              value: '%DOWNSTREAM_REMOTE_ADDRESS%'
            - name: X-Dynamic-Header-2
              value: '%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%'
            - name: X-Dynamic-Header-3
              value: '%DOWNSTREAM_LOCAL_ADDRESS%'
            - name: X-Dynamic-Header-4
              value: '%DOWNSTREAM_LOCAL_ADDRESS_WITHOUT_PORT%'
            - name: X-Dynamic-Header-5
              value: '%DOWNSTREAM_LOCAL_PORT%'
            - name: X-Dynamic-Header-6
              value: '%DOWNSTREAM_LOCAL_URI_SAN%'
            - name: X-Dynamic-Header-7
              value: '%DOWNSTREAM_PEER_URI_SAN%'
            - name: X-Dynamic-Header-8
              value: '%DOWNSTREAM_LOCAL_SUBJECT%'
            - name: X-Dynamic-Header-9
              value: '%DOWNSTREAM_PEER_SUBJECT%'
            - name: X-Dynamic-Header-10
              value: '%DOWNSTREAM_PEER_ISSUER%'
            - name: X-Dynamic-Header-11
              value: '%DOWNSTREAM_TLS_SESSION_ID%'
            - name: X-Dynamic-Header-12
              value: '%DOWNSTREAM_TLS_CIPHER%'
            - name: X-Dynamic-Header-13
              value: '%DOWNSTREAM_TLS_VERSION%'
            - name: X-Dynamic-Header-14
              value: '%DOWNSTREAM_PEER_FINGERPRINT_256%'
            - name: X-Dynamic-Header-15
              value: '%DOWNSTREAM_PEER_FINGERPRINT_1%'
            - name: X-Dynamic-Header-16
              value: '%DOWNSTREAM_PEER_SERIAL%'
            - name: X-Dynamic-Header-17
              value: '%DOWNSTREAM_PEER_CERT%'
            - name: X-Dynamic-Header-18
              value: '%DOWNSTREAM_PEER_CERT_V_START%'
            - name: X-Dynamic-Header-19
              value: '%DOWNSTREAM_PEER_CERT_V_END%'
            - name: X-Dynamic-Header-20
              value: '%HOSTNAME%'
            - name: X-Dynamic-Header-21
              value: '%PROTOCOL%'
            - name: X-Dynamic-Header-22
              value: '%UPSTREAM_REMOTE_ADDRESS%'
            - name: X-Dynamic-Header-23
              value: '%RESPONSE_FLAGS%'
            - name: X-Dynamic-Header-24
              value: '%RESPONSE_CODE_DETAILS%'

---

import data.contour.resources

fatal_proxy_is_not_valid[msg] {
  name := "echo"
  proxy := resources.get("httpproxies", name)
  status := object.get(proxy, "status", {})

  object.get(status, "currentStatus", "") != "valid"

  msg := sprintf("HTTP proxy for '%s' is not valid\n%s", [
    name, yaml.marshal(status)
  ])
}

---

import data.contour.http.client
import data.contour.http.client.url
import data.contour.http.expect
import data.contour.http.response

Response := client.Get({
  "url": url.http(sprintf("/%d", [time.now_ns()])),
  "headers": {
    "Host": "echo.projectcontour.io",
    "User-Agent": client.ua("request-headers"),
  },
})

check_for_status_code [msg] {
  msg := expect.response_status_is(Response, 200)
}

# Check simple percentage escape
check_simple_percentage_escape [msg] {
  msg := expect.response_header_is(Response, "X-App-Weight", "100%")
}

# Check known good Envoy dynamic header value
check_known_good_envoy_dynamic_header [msg] {
  msg := expect.response_header_has_prefix(Response, "X-Envoy-Hostname", "envoy-")
}

# Check unknown Envoy dynamic header value
check_unknown_envoy_dynamic_header [msg] {
  msg := expect.response_header_is(Response, "X-Envoy-Unknown", "%UNKNOWN%")
}

# Check valid Envoy REQ value for header that exists
check_valid_envoy_req_header [msg] {
  body := response.body(Response)
  host := object.get(body, "host", "")
  msg := expect.response_header_is(Response, "X-Request-Host", host)
}

# Check invalid Envoy REQ value for header that does not exist
check_invalid_envoy_req_header [msg] {
  body := response.body(Response)
  msg := expect.response_header_is(Response, "X-Request-Missing-Header", "ook")
}

# Check header value with dynamic and non-dynamic content and multiple dynamic fields
check_nondynamic_with_multiple_field_header [msg] {
  body := response.body(Response)
  host := object.get(body, "host", "")
  msg := expect.response_header_is(Response, "X-Host-Protocol", sprintf("%s - HTTP/1.1", [host]))
}

# Check dynamic service headers are populated as expected
check_dynamic_service_headers [msg] {
  msg := expect.response_header_is(Response, "X-Contour-Service", "ingress-conformance-echo:80")
}
